kind/sigsegv-sail/http-echo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-echo
spec:
  parentRefs:
  - name: http-echo-gateway
  hostnames: ["try.echo.com"]
  rules:
  - matches:
    - path:
        type: Exact
        value: /get
    backendRefs:
    - name: http-echo
      port: 8080
